Icon clipping fix 3

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -164,9 +164,9 @@ li.dropdown {
 	border-radius: 50%;
 }
 
-.home-icon:nth-child(1) { background-image: url(icons/icon-picture.png); }
-.home-icon:nth-child(2) { background-image: url(icons/icon-video.png); }
-.home-icon:nth-child(3) { background-image: url(icons/icon-about.png); }
+.content-tile:nth-child(1) .home-icon { background-image: url(icons/icon-picture.png); }
+.content-tile:nth-child(2) .home-icon { background-image: url(icons/icon-video.png); }
+.content-tile:nth-child(3) .home-icon { background-image: url(icons/icon-about.png); }
 
 h3 {
 	font-family: 'Open Sans', sans-serif;
